2008-07-21  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.3 for release

2008-06-17  Lapo Calamandrei  <calamandrei@gmail.com>

	* {32x32,48x48}/actions/zoom* : little refresh for a more consistent look.

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-settings-default-applications.png:
	Remove this icon which is no longer needed

	Fixes #538474

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Fix the help text for icon-mapping to say auto instead of $mapenable

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.2 for release

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* */apps/Makefile.am:
	* */apps/boot.*:
	Remove this from 16x16 and 22x22 as well

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* */actions/Makefile.am:
	* */apps/Makefile.am:
	* */actions/system-shutdown.*:
	* */apps/gnome-shutdown.*:
	Move the apps/gnome-shutdown icon to actions/system-shutdown

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* 24x24/apps/Makefile.am:
	* 48x48/apps/Makefile.am:
	* */apps/administration.png:
	* */apps/advanced-directory.png:
	* */apps/apacheconf.png:
	* */apps/boot.png:
	* */apps/character-picker.png:
	* */apps/config-*.png:
	* */apps/disks.png:
	* */apps/evolution-*.png:
	* */apps/gdm.png:
	* */apps/gnome-amusements.png:
	* */apps/gnome-audio.png:
	* */apps/gnome-cpu.png:
	* */apps/gnome-desktop-config.png:
	* */apps/gnome-favorites.png:
	* */apps/gnome-finance.png:
	* */apps/gnome-mini-commander.png:
	* */apps/gnome-networktool.png:
	* */apps/gnome-status.png:
	* */apps/hwbrowser.png:
	* */apps/network-config.png:
	* */apps/ooo_*.png:
	* */apps/postscript-viewer.*:
	* */apps/serviceconf.png:
	* */apps/shares.png:
	Remove some more deprecated icons
	
2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am:
	Remove the intltool scripts bits, as new intltool uses installed copies

	* configure.in: