@@ -11,6 +11,7 @@ icons_DATA =			\
 	folder-saved-search.png	\
 	network-server.png	\
 	network-workgroup.png	\
+	user-bookmarks.png	\
 	start-here.png	\
 	user-desktop.png	\
 	user-home.png		\
