@@ -1,3 +1,8 @@
+2008-08-13  Andreas Nilsson  <andreas@imendio.com>
+
+	* {16x16,22x22,24x24,32x32,scalable}/places/user-bookmarks.png:
+	added user-bookmarks icon based on bookmark-new
+
 2008-07-21  Rodney Dawes  <dobey.pwns@gmail.com>
 
 	* configure.in:
